src/objects/Attribute_Adjustment_Item__c.object
<CustomObject>
    <fields>
        <fullName>Adj_Type__c</fullName>
        <label>Adj Type</label>
        <picklist>
            <picklistValues>
                <fullName>Markup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Percent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AddOnAmount</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>AddOnPercent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Adj_Value__c</fullName>
        <label>Adj Value</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Attribute_Adjustment__c</fullName>
        <label>Attribute Adjustment</label>
        <referenceTo>Attribute_Adjustment__c</referenceTo>
        <relationshipLabel>Attribute Adjustment Items</relationshipLabel>
        <relationshipName>Attribute_Adjustment_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Attribute_Name__c</fullName>
        <label>Attribute Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_Value__c</fullName>
        <label>Attribute Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Attribute Adjustment Item</label>
    <nameField>
        <label>Attribute Adjustment Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attribute Adjustment Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>